CV con la informacion llenada

--- a/index.html
+++ b/index.html
@@ -3,8 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi CV</title>
+    <title>CV Juan Pablo Mora Silva</title>
 </head>
 <body>
+    <header> 
+        <h1>CV Juan Pablo Mora Silva</h1>
+        <section>
+            <h2>Información personal</h2>
+            <ul>
+                <li>Dirección:</li>
+                <li>Teléfono: +57 320 8036487</li>
+                <li>Correo Electrónico: juanmorsi@unisabana.edu.co</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Educación</h2>
+            <ul>
+                <li>
+                    Graduado en el colegio Liceo General Serviez en el día 26/11/2024
+                </li>
+            </ul>
+        </section>
+        <section>    
+            <h2>Experiencia Laboral</h2>
+            <ul>
+                <li>
+                    Ninguna
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Habilidades</h2>
+            <ul>
+                <li>Manejo de GIT</li>
+                <li>Inglés Intermedio</li>
+                <li>Programador Intermedio</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Hobbies/Intereses</h2>
+            <ul>
+                <li>Escuchar música</li>
+                <li>Jugar viedojuegos</li>
+                <li>Jugar fútbol</li>
+            </ul>
+        </section>            
+    </header>
 </body>
 </html>
