CV completado con archivo css unido

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Juan Pablo Mora Silva</title>
@@ -11,7 +12,7 @@
         <section>
             <h2>Información personal</h2>
             <ul>
-                <li>Dirección:</li>
+                <li>Dirección: Autop Norte Km 2 Vía Chía, Chía, Cundinamarca</li>
                 <li>Teléfono: +57 320 8036487</li>
                 <li>Correo Electrónico: juanmorsi@unisabana.edu.co</li>
             </ul>
@@ -37,17 +38,17 @@
             <ul>
                 <li>Manejo de GIT</li>
                 <li>Inglés Intermedio</li>
-                <li>Programador Intermedio</li>
+                <li>Conocimientos de programación</li>
             </ul>
         </section>
         <section>
             <h2>Hobbies/Intereses</h2>
             <ul>
                 <li>Escuchar música</li>
-                <li>Jugar viedojuegos</li>
+                <li>Jugar videojuegos</li>
                 <li>Jugar fútbol</li>
             </ul>
-        </section>            
+        </section>                   
     </header>
 </body>
 </html>
